deleted body class names in 404 and 500 html

--- a/public/500.html
+++ b/public/500.html
@@ -140,7 +140,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/404.html -->
   <h1>500 Internal Server Error</h1>
   <p class="zoom-area">We are currently trying to fix the problem.</p>
