--- a/public/404.html
+++ b/public/404.html
@@ -140,7 +140,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/404.html -->
   <h1>404 Page Not Found</h1>
   <p class="zoom-area">You may have mistyped the address or the page may have moved.</p>
